--- a/praticaboots.html
+++ b/praticaboots.html
@@ -33,7 +33,7 @@
             <section class="container shadow p-3 mb-5 bg-white rounded" >
                 <h2 class="h2 text-primary" > Bootstrap's page </h2>
                 <p class="lead p-2 mt-2" >
-                    Workin with Bootstrap's components - Imagens, Tables, Buttons, Navigation... 
+                    Working with Bootstrap's components - Images, Tables, Buttons, Navigation... 
                 </p>
                 <hr>
                 
